# jsi-canvas

./: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/jni/: CMakeLists.txt  CameraJNI.cpp  OnLoad.cpp  SceneGraphJNI.cpp
articles/: CompounPath.md  Transformation.md
cpp/camera-state/: CameraState.h
cpp/commands/: Command.cpp  Command.h  CommandHistory.cpp  CommandHistory.h
cpp/event-emitter/: EventEmitter.cpp  EventEmitter.h
cpp/jsi/: CameraJSI.cpp  CameraJSI.h  CameraStateModule.cpp  CameraStateModule.h  CameraStateRegistry.cpp  CameraStateRegistry.h  JSInvokerRegistery.cpp  JSInvokerRegistery.h  SceneGraphJSI.cpp  SceneGraphJSI.h  SceneGraphModule.cpp  SceneGraphModule.h  SceneGraphRegistry.cpp  SceneGraphRegistry.h
cpp/logger/: Logger.cpp  Logger.h
cpp/scene-graph/: SceneGraph.cpp  SceneGraph.h
cpp/tests/: TestNode.cpp  benchmark  run_visual.sh
cpp/types/: Node.h  PlatformTypes.h
cpp/vector-engine/: Primitives.h
docs/architecture/: component-responsibilities.md  data-flow.md
ios/: Podfile
ios/Canvas/: ColorBox.h  ColorBox.mm  ColorBoxRegistry.m
ios/CanvasMVP/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/CanvasMVP.xcodeproj/: project.pbxproj
ios/CanvasMVP.xcworkspace/: contents.xcworkspacedata
src/components/: CanvasView.tsx  ColorBox.tsx
src/hooks/: useCanvasCamera.ts  useSceneGraph.ts
src/specs/: CanvasViewNativeComponent.ts  ColorBoxNativeComponent.ts  NativeCameraStateModule.ts  NativeSceneGraphModule.tsx
(+70 files in other folders)
